--- a/src/style.scss
+++ b/src/style.scss
@@ -68,7 +68,7 @@ img {
     margin-top: 10px;
 }
 
-#hint {
+/*#hint {
     background-color: #52d29d;
     border: none;
     padding: 13px 26px;
@@ -79,7 +79,7 @@ img {
     font-weight: 600;
     width: 100%;
     margin-top: 10px;
-}
+}*/
 
 
 @-webkit-keyframes pew {
